objects/Order_Management__c.object
<CustomObject>
    <label>Order Management</label>
    <nameField>
        <displayFormat>{YY}{MM}{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Care</relationshipLabel>
        <relationshipName>R00N30000000rot7EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Care</relationshipLabel>
        <relationshipName>R00N30000000rotvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000000k8ieEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Care</relationshipLabel>
        <relationshipName>R00N30000000ros5EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Order_date__c</fullName>
        <label>SAP Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Num__c</fullName>
        <label>Customer PO Num</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Ship_Date__c</fullName>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Ship_Date__c</fullName>
        <label>Estimated Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000000rowpEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Hardcopy_Received__c</fullName>
        <label>Date Hardcopy Received</label>
        <type>Date</type>
    </fields>
</CustomObject>